c2/proofnumbercheck
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumbercheck/src/proof.c:1949:10: error: conflicting types for 'proofnumbercheck'
move_s * proofnumbercheck( move_s *retstr, move_s compmove) 
         ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumbercheck/src/protos.h:125:8: note: previous declaration is here
move_s proofnumbercheck(move_s compmove);
       ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumbercheck/src/proof.c:1969:17: error: expected expression
v2 = *( _OWORD *)&compmove.from; 
                ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumbercheck/src/proof.c:1969:9: error: use of undeclared identifier '_OWORD'
v2 = *( _OWORD *)&compmove.from; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumbercheck/src/proof.c:2089:17: error: expected expression
v2 = *( _OWORD *)&v16.from; 
                ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumbercheck/src/proof.c:2089:9: error: use of undeclared identifier '_OWORD'
v2 = *( _OWORD *)&v16.from; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumbercheck/src/proof.c:2091:12: error: expected expression
*( _OWORD *)&retstr->from = v2; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumbercheck/src/proof.c:2091:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&retstr->from = v2; 
   ^
7 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/proofnumbercheck/src/obj/proof.o] Error 1
